--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.11",
     "axios": "^1.8.2",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.479.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
